--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>부동산 매물 메모장</title>
 
-  <!-- Tailwind (CDN) -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Leaflet + MarkerCluster (키 필요 없음) -->
+  <!-- Leaflet (지도) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
+  <!-- MarkerCluster -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
@@ -39,7 +40,7 @@
 
   <!-- 메인 -->
   <main class="flex flex-1 min-h-0">
-    <!-- 좌측 패널 -->
+    <!-- 왼쪽 -->
     <section class="w-full md:w-1/3 bg-white border-r flex flex-col min-h-0">
       <div class="p-3 border-b flex justify-between items-center">
         <h2 class="text-base font-semibold">매물 목록</h2>
@@ -48,13 +49,13 @@
       <div id="propertyList" class="flex-1 overflow-y-auto p-3 space-y-3 text-sm"></div>
     </section>
 
-    <!-- 우측 지도 -->
+    <!-- 오른쪽 지도 -->
     <section class="flex-1 relative min-h-0">
       <div id="map" class="absolute inset-0"></div>
     </section>
   </main>
 
-  <!-- 등록 폼 레이어 -->
+  <!-- 매물 등록 폼 -->
   <div id="propertyFormLayer" class="fixed inset-0 bg-black/50 hidden justify-center items-center z-50">
     <div class="bg-white w-full max-w-lg rounded shadow-lg p-5 relative">
       <button id="closeFormBtn" class="absolute top-2 right-2 text-gray-500 hover:text-black">✕</button>
@@ -63,7 +64,7 @@
         <div>
           <label class="block text-sm mb-1">주소</label>
           <input id="address" type="text" placeholder="예) 서울특별시 중구 세종대로 110" class="w-full border p-2 rounded text-sm" required/>
-          <p class="text-xs text-gray-500 mt-1">※ 주소는 대략적으로 입력해도 돼요. (Nominatim 지오코딩)</p>
+          <p class="text-xs text-gray-500 mt-1">※ 대략적인 주소도 가능</p>
         </div>
         <div>
           <label class="block text-sm mb-1">매물 종류</label>
@@ -115,6 +116,7 @@
     </div>
   </div>
 
+  <!-- JS 로드 (마지막에 위치해야 작동함) -->
   <script src="main.js"></script>
 </body>
 </html>
