--- a/index.html
+++ b/index.html
@@ -3,147 +3,184 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>부동산 매물 메모장</title>
+  <title>HimKong 부동산 메모장</title>
+
+  <!-- Favicons (도메인 브랜딩) -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <!-- SEO -->
+  <meta name="description" content="HimKong 부동산 메모장 - 매물을 지도와 함께 빠르게 기록하고 관리하세요.">
 
   <!-- Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Leaflet (지도) -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  ></script>
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <!-- MarkerCluster -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-  <!-- XLSX (엑셀 내보내기) -->
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-
-  <!-- (선택) 다음 주소검색: 있으면 사용, 없어도 동작 -->
-  <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
+  <!-- Supabase (서버 저장 옵션용) -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
   <link rel="stylesheet" href="style.css"/>
 </head>
-<body class="bg-gray-100 flex flex-col min-h-screen">
+<body class="bg-slate-50 min-h-screen flex flex-col">
 
   <!-- 헤더 -->
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold">🏠 부동산 매물 메모장</h1>
-    <button id="exportExcel" class="bg-emerald-500 hover:bg-emerald-600 text-white px-4 py-2 rounded">
-      엑셀로 내보내기
-    </button>
+  <header class="sticky top-0 z-40 bg-white/80 backdrop-blur border-b">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <!-- 심플 로고 (브랜딩) -->
+        <svg width="28" height="28" viewBox="0 0 24 24" class="text-emerald-600">
+          <path fill="currentColor" d="M3 10.5L12 3l9 7.5v9a1.5 1.5 0 0 1-1.5 1.5h-15A1.5 1.5 0 0 1 3 19.5v-9Z"/>
+          <path fill="white" d="M6.5 18V12h11v6z"/>
+        </svg>
+        <h1 class="text-xl font-bold tracking-tight">HimKong 부동산 메모장</h1>
+        <span id="storageBadge" class="ml-2 text-xs px-2 py-0.5 rounded bg-slate-100 text-slate-600 border"></span>
+      </div>
+
+      <div class="flex gap-2">
+        <button id="exportExcel" class="btn bg-emerald-600 hover:bg-emerald-700 text-white">엑셀로 내보내기</button>
+        <a href="https://himkong.com" class="btn bg-slate-100 hover:bg-slate-200 text-slate-700">홈</a>
+      </div>
+    </div>
+
+    <!-- 카테고리 -->
+    <div class="max-w-7xl mx-auto px-4 pb-3">
+      <div class="flex flex-wrap gap-2 text-sm">
+        <button class="chip active category-btn" data-type="전체">전체</button>
+        <button class="chip category-btn" data-type="아파트">아파트</button>
+        <button class="chip category-btn" data-type="오피스텔">오피스텔</button>
+        <button class="chip category-btn" data-type="빌라/주택">빌라/주택</button>
+        <button class="chip category-btn" data-type="원룸/투룸">원룸/투룸</button>
+        <button class="chip category-btn" data-type="상가/공장/토지">상가/공장/토지</button>
+
+        <div class="ml-auto">
+          <button id="openFormBtn" class="btn bg-blue-600 hover:bg-blue-700 text-white">+ 매물 등록</button>
+        </div>
+      </div>
+    </div>
   </header>
 
-  <!-- 상단 카테고리 -->
-  <div class="bg-white border-b">
-    <div class="max-w-7xl mx-auto p-3 flex gap-2 overflow-x-auto text-sm">
-      <button class="category-btn px-3 py-1 rounded bg-blue-600 text-white" data-type="전체">전체</button>
-      <button class="category-btn px-3 py-1 rounded bg-gray-100 hover:bg-blue-100" data-type="아파트">아파트</button>
-      <button class="category-btn px-3 py-1 rounded bg-gray-100 hover:bg-blue-100" data-type="오피스텔">오피스텔</button>
-      <button class="category-btn px-3 py-1 rounded bg-gray-100 hover:bg-blue-100" data-type="빌라/주택">빌라/주택</button>
-      <button class="category-btn px-3 py-1 rounded bg-gray-100 hover:bg-blue-100" data-type="원룸/투룸">원룸/투룸</button>
-      <button class="category-btn px-3 py-1 rounded bg-gray-100 hover:bg-blue-100" data-type="상가/공장/토지">상가/공장/토지</button>
-    </div>
-  </div>
-
   <!-- 메인 -->
-  <main class="flex flex-1 min-h-0 max-w-7xl mx-auto w-full">
-    <!-- 왼쪽 -->
-    <section class="w-full md:w-1/3 bg-white border-r flex flex-col min-h-0">
-      <div class="p-3 border-b flex justify-between items-center">
-        <h2 class="text-base font-semibold">매물 목록</h2>
-        <button id="openFormBtn" class="bg-blue-500 hover:bg-blue-600 text-white text-sm px-3 py-1 rounded">+ 매물 등록</button>
+  <main class="max-w-7xl mx-auto flex-1 w-full px-4 py-4 grid grid-cols-1 md:grid-cols-[380px_1fr] gap-4">
+    <!-- 목록 -->
+    <section class="min-h-0">
+      <div class="card mb-3">
+        <div class="flex items-center justify-between">
+          <h2 class="font-semibold">매물 목록</h2>
+          <button id="clearAllBtn" class="text-xs text-slate-500 hover:text-rose-600">전체 삭제</button>
+        </div>
       </div>
-      <div id="propertyList" class="flex-1 overflow-y-auto p-3 space-y-3 text-sm"></div>
+
+      <div id="propertyList" class="min-h-[200px] space-y-3 overflow-y-auto pr-1" style="max-height: calc(100vh - 220px);"></div>
     </section>
 
-    <!-- 오른쪽 지도 -->
-    <section class="flex-1 relative min-h-0">
-      <div id="map" class="absolute inset-0"></div>
+    <!-- 지도 -->
+    <section class="relative min-h-[60vh]">
+      <div id="map" class="absolute inset-0 rounded-xl border"></div>
     </section>
   </main>
 
-  <!-- 매물 등록 폼 (모달) -->
-  <div id="propertyFormLayer" class="fixed inset-0 hidden items-center justify-center bg-black/50 z-[10000]">
-    <div class="bg-white w-full max-w-lg rounded shadow-lg p-5 relative">
-      <button id="closeFormBtn" class="absolute top-2 right-2 text-gray-500 hover:text-black">✕</button>
-      <h2 class="text-lg font-bold mb-3">매물 등록</h2>
+  <!-- 매물 등록 모달 -->
+  <div id="propertyFormLayer" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/40"></div>
+    <div class="relative w-[92%] max-w-lg">
+      <div class="card p-5">
+        <button id="closeFormBtn" class="absolute top-4 right-4 text-slate-400 hover:text-slate-600">✕</button>
+        <h3 class="text-lg font-bold mb-3">매물 등록</h3>
 
-      <div class="space-y-2">
-        <label class="block text-sm mb-1">주소</label>
-        <div class="flex gap-2">
-          <input id="address" type="text" placeholder="예) 서울특별시 중구 세종대로 110"
-                 class="w-full border p-2 rounded text-sm flex-1"/>
-          <button id="searchAddr" class="shrink-0 bg-gray-200 hover:bg-gray-300 px-3 rounded text-sm">주소검색</button>
-        </div>
-
-        <div>
-          <label class="block text-sm mb-1">매물 종류</label>
-          <select id="type" class="w-full border p-2 rounded text-sm">
-            <option>아파트</option><option>오피스텔</option><option>빌라/주택</option>
-            <option>원룸/투룸</option><option>상가/공장/토지</option>
-          </select>
-        </div>
-
-        <div>
-          <label class="block text-sm mb-1">거래 유형</label>
-          <select id="dealType" class="w-full border p-2 rounded text-sm">
-            <option>매매</option><option>전세</option><option>월세</option><option>단기임대</option>
-          </select>
-        </div>
-
-        <div class="flex gap-2">
-          <div class="flex-1">
-            <label class="block text-sm mb-1">보증금/매매가</label>
-            <input id="price" type="number" class="w-full border p-2 rounded text-sm" />
+        <form id="propertyForm" class="space-y-3">
+          <div>
+            <label class="label">주소</label>
+            <div class="flex gap-2">
+              <input id="address" type="text" class="input flex-1" placeholder="예) 서울특별시 종로구 세종대로 110" required />
+              <button id="openAddressSearch" type="button" class="btn bg-slate-100 hover:bg-slate-200 text-slate-700">주소검색</button>
+            </div>
+            <p class="hint">※ 정확한 주소일수록 지도 위치가 정확해집니다.</p>
           </div>
-          <div class="flex-1">
-            <label class="block text-sm mb-1">월세</label>
-            <input id="monthly" type="number" class="w-full border p-2 rounded text-sm" />
+
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+            <div>
+              <label class="label">매물 종류</label>
+              <select id="type" class="input">
+                <option>아파트</option>
+                <option>오피스텔</option>
+                <option>빌라/주택</option>
+                <option>원룸/투룸</option>
+                <option>상가/공장/토지</option>
+              </select>
+            </div>
+            <div>
+              <label class="label">거래 유형</label>
+              <select id="dealType" class="input">
+                <option>매매</option>
+                <option>전세</option>
+                <option>월세</option>
+                <option>단기임대</option>
+              </select>
+            </div>
           </div>
-        </div>
 
-        <div>
-          <label class="block text-sm mb-1">면적 (㎡)</label>
-          <input id="area" type="number" class="w-full border p-2 rounded text-sm" />
-        </div>
-        <div>
-          <label class="block text-sm mb-1">층수</label>
-          <input id="floor" type="text" class="w-full border p-2 rounded text-sm" />
-        </div>
-        <div>
-          <label class="block text-sm mb-1">관리비</label>
-          <input id="maintenance" type="number" class="w-full border p-2 rounded text-sm" />
-        </div>
-        <div>
-          <label class="block text-sm mb-1">기타 메모</label>
-          <textarea id="memo" class="w-full border p-2 rounded text-sm"></textarea>
-        </div>
+          <div class="grid grid-cols-2 sm:grid-cols-4 gap-3">
+            <div>
+              <label class="label">보증금/매매가</label>
+              <input id="price" type="number" class="input" />
+            </div>
+            <div>
+              <label class="label">월세</label>
+              <input id="monthly" type="number" class="input" />
+            </div>
+            <div>
+              <label class="label">면적(㎡)</label>
+              <input id="area" type="number" class="input" />
+            </div>
+            <div>
+              <label class="label">층수</label>
+              <input id="floor" type="text" class="input" />
+            </div>
+          </div>
 
-        <button id="submitBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded">
-          매물 등록
-        </button>
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+            <div>
+              <label class="label">관리비</label>
+              <input id="maintenance" type="number" class="input" />
+            </div>
+            <div>
+              <label class="label">기타 메모</label>
+              <input id="memo" type="text" class="input" />
+            </div>
+          </div>
+
+          <button id="submitBtn" type="button" class="btn w-full bg-blue-600 hover:bg-blue-700 text-white">매물 등록</button>
+        </form>
       </div>
     </div>
   </div>
 
-  <!-- 앱 스크립트 (의존성 모두 로드된 뒤 실행) -->
+  <!-- 주소검색 모달 (Nominatim) -->
+  <div id="addressSearchLayer" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/40"></div>
+    <div class="relative w-[92%] max-w-2xl">
+      <div class="card p-5">
+        <div class="flex items-center justify-between mb-3">
+          <h3 class="text-lg font-bold">주소 검색</h3>
+          <button id="closeAddressSearch" class="text-slate-400 hover:text-slate-600">✕</button>
+        </div>
+        <div class="flex gap-2 mb-3">
+          <input id="addressKeyword" class="input flex-1" placeholder="도로명, 지번 등 키워드" />
+          <button id="addressSearchBtn" class="btn bg-slate-100 hover:bg-slate-200">검색</button>
+        </div>
+        <div id="addressSearchResult" class="space-y-2 max-h-[50vh] overflow-y-auto"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="main.js"></script>
 </body>
 </html>
